@@ -2223,6 +2223,19 @@
    <File path="vsi\msdbg168.d" />
    <File path="vsi\msdbg169.d" />
    <File path="vsi\msdbg16a.d" />
+   <File path="vsi\msdbg170.d" />
+   <File path="vsi\msdbg171.d" />
+   <File path="vsi\msdbg1710.d" />
+   <File path="vsi\msdbg1711.d" />
+   <File path="vsi\msdbg1712.d" />
+   <File path="vsi\msdbg172.d" />
+   <File path="vsi\msdbg173.d" />
+   <File path="vsi\msdbg174.d" />
+   <File path="vsi\msdbg175.d" />
+   <File path="vsi\msdbg176.d" />
+   <File path="vsi\msdbg177.d" />
+   <File path="vsi\msdbg178.d" />
+   <File path="vsi\msdbg179.d" />
    <File path="vsi\msdbg90.d" />
    <File path="vsi\objext.d" />
    <File path="vsi\ocdesign.d" />
@@ -2260,6 +2273,7 @@
    <File path="vsi\vslangproj157.d" />
    <File path="vsi\vslangproj158.d" />
    <File path="vsi\vslangproj165.d" />
+   <File path="vsi\vslangproj1711.d" />
    <File path="vsi\vslangproj2.d" />
    <File path="vsi\vslangproj80.d" />
    <File path="vsi\vslangproj90.d" />
@@ -2294,6 +2308,18 @@
    <File path="vsi\vsshell166.d" />
    <File path="vsi\vsshell167.d" />
    <File path="vsi\vsshell169.d" />
+   <File path="vsi\vsshell171.d" />
+   <File path="vsi\vsshell1710.d" />
+   <File path="vsi\vsshell1711.d" />
+   <File path="vsi\vsshell1712.d" />
+   <File path="vsi\vsshell1713.d" />
+   <File path="vsi\vsshell172.d" />
+   <File path="vsi\vsshell174.d" />
+   <File path="vsi\vsshell175.d" />
+   <File path="vsi\vsshell176.d" />
+   <File path="vsi\vsshell177.d" />
+   <File path="vsi\vsshell178.d" />
+   <File path="vsi\vsshell179.d" />
    <File path="vsi\vsshell2.d" />
    <File path="vsi\vsshell80.d" />
    <File path="vsi\vsshell90.d" />
