@@ -124,13 +124,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="Microsoft.VisualStudio.TextManager.Interop">
-      <HintPath>C:\Windows\assembly\GAC\Microsoft.VisualStudio.TextManager.Interop\7.1.40304.0__b03f5f7f11d50a3a\Microsoft.VisualStudio.TextManager.Interop.dll</HintPath>
+      <HintPath>$(GAC_HintPath)\Microsoft.VisualStudio.TextManager.Interop\7.1.40304.0__b03f5f7f11d50a3a\Microsoft.VisualStudio.TextManager.Interop.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.OLE.Interop">
-      <HintPath>C:\Windows\assembly\GAC\Microsoft.VisualStudio.OLE.Interop\7.1.40304.0__b03f5f7f11d50a3a\Microsoft.VisualStudio.OLE.Interop.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualStudio.Shell.Interop">
-      <HintPath>$(GAC_HintPath)\Microsoft.VisualStudio.Shell.Interop\vs15\Microsoft.VisualStudio.Shell.Interop.dll</HintPath>
+      <HintPath>$(GAC_HintPath)\Microsoft.VisualStudio.OLE.Interop.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.Shell.Interop">
       <HintPath>$(GAC_HintPath)\Microsoft.VisualStudio.Shell.Interop\vs15\Microsoft.VisualStudio.Shell.Interop.dll</HintPath>
