@@ -23,6 +23,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VisualDWizard</RootNamespace>
     <AssemblyName>VisualDWizard</AssemblyName>
+    <GAC_HintPath Condition=" '$(GAC_HintPath)' == '' and Exists('assembly')">assembly</GAC_HintPath>
+    <GAC_HintPath Condition=" '$(GAC_HintPath)' == '' ">c:\Windows\Microsoft.NET\assembly\GAC_MSIL</GAC_HintPath>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -77,7 +79,9 @@
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.TemplateWizardInterface, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.TemplateWizardInterface">
+      <HintPath>$(GAC_HintPath)\Microsoft.VisualStudio.TemplateWizardInterface\Microsoft.VisualStudio.TemplateWizardInterface.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
